--- a/style/main.scss
+++ b/style/main.scss
@@ -1,3 +1,34 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .input:focus {
+    outline: none;
+  }
+
+  .input-field:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(50, 50, 50, 255); /* Adjust the color as needed */
+  }
+
+  .text-area {
+    @apply w-full border-none resize-none focus:outline-none focus:ring-0 placeholder-gray-500;
+  }
+
+  .icon-sm {
+    @apply w-4 h-4;
+  }
+
+  .icon {
+    @apply w-6 h-6;
+  }
+
+  .icon-lg {
+    @apply w-8 h-8;
+  }
+}
+
 body {
 	font-family: sans-serif;
 	text-align: center;
